--- a/project/templates/unicef/the_facts.html
+++ b/project/templates/unicef/the_facts.html
@@ -2,6 +2,7 @@
 {% load url from future %}
 
 {% block content %}
+<div class="h2">Ebola</div>
 <div class="h2">The facts</div>
 <div class="intro">Why it is important to share and act on this information</div>
 <div class="detail">
