--- a/project/templates/jmbo/modelbase_category_list.html
+++ b/project/templates/jmbo/modelbase_category_list.html
@@ -5,6 +5,7 @@
 
 {% block content %}
     <div class="object-category-list modelbase-category-list">
+        <div class="h1">Ebola</div>
         <div class="h1">
             <img src="{{ STATIC_URL }}img/icon-{{category.slug}}.jpg"> {{ category.title }}
             <div class="clear"></div>
