--- a/project/templates/unicef/safe_burial_practices.html
+++ b/project/templates/unicef/safe_burial_practices.html
@@ -2,6 +2,7 @@
 {% load url from future %}
 
 {% block content %}
+<div class="h2">Ebola</div>
 <div class="h2">Safe Burial practices</div>
 <div class="intro">Why it is important to share and act on this information</div>
 <div class="detail">
