--- a/project/templates/unicef/home.html
+++ b/project/templates/unicef/home.html
@@ -7,18 +7,19 @@
 
 {% block content %}
     <div id="content">
+        <div class="h1">&nbsp;Ebola</div>
         <div class="h1">
-            <a href="{% url 'category_object_list' 'the-facts' %}"><img src="{{ STATIC_URL }}img/icon-diarrhoea.jpg"> The Facts</a>
+            <a href="{% url 'category_object_list' 'the-facts' %}"><img src="{{ STATIC_URL }}img/icon-the-facts.jpg"> The Facts</a>
             <div class="clear"></div>
         </div>
 
         <div class="h1">
-            <a href="{% url 'category_object_list' 'treatment' %}"><img src="{{ STATIC_URL }}img/icon-hygiene.jpg"> Treatment</a>
+            <a href="{% url 'category_object_list' 'treatment' %}"><img src="{{ STATIC_URL }}img/icon-treatment.jpg"> Treatment</a>
             <div class="clear"></div>
         </div>
 
         <div class="h1">
-            <a href="{% url 'category_object_list' 'safe-burial-practices' %}"><img src="{{ STATIC_URL }}img/icon-hygiene.jpg"> Safe Burial practices</a>
+            <a href="{% url 'category_object_list' 'safe-burial-practices' %}"><img src="{{ STATIC_URL }}img/icon-safe-burial-practices.jpg"> Safe Burial practices</a>
             <div class="clear"></div>
         </div>
 
