change background for header

--- a/unicef/static/css/style.css
+++ b/unicef/static/css/style.css
@@ -14,7 +14,7 @@
 
 /*  HEADER  */
 
-	#header { padding: 10px; background: #C55; text-align: center; border-bottom: 1px dotted #0093ef; }
+	#header { padding: 10px; background: #cce9fc; text-align: center; border-bottom: 1px dotted #0093ef; }
 		#header img { display: block; margin: 0 auto }
 
 
