--- a/unicef/static/css/style.css
+++ b/unicef/static/css/style.css
@@ -14,7 +14,7 @@
 
 /*  HEADER  */
 
-	#header { padding: 10px; background: #cce9fc; text-align: center; border-bottom: 1px dotted #0093ef; }
+	#header { padding: 10px; background: #cce9fc; text-align: center; border-bottom: 1px dotted #fff; }
 		#header img { display: block; margin: 0 auto }
 
 
@@ -36,14 +36,14 @@
 		#content .h1 { background: #C55; border-top: 1px dotted #fff; font-weight: bold; color: #fff; vertical-align: middle; line-height: 44px }
 		#content .h1 img { float: left; padding: 0 10px 0 0; }
 		#content .h1 a { display: block; color: #fff;}
-		#content .h2 { padding: 10px; background: #C55; font-weight: bold; color: #0093ef; border-top: 1px dotted #0093ef; }
+		#content .h2 { padding: 10px; background: #C55; font-weight: bold; color: #fff; border-top: 1px dotted #fff; }
 		#content .box { padding: 10px; }
 			#content .box .item { padding: 0 0 10px 0; margin: 0 0 10px 0; border-bottom: 1px dotted #C55; }
 			#content .box .item:last-child { padding: 0; margin: 0; border: 0; }
 			#content .box .item a.pic { float: left; padding: 0 10px 0 0; }
 			#content .box .item a.pic img { display: block; }
 			#content .box .item .text { margin: 0 0 0 0; }
-		#content .intro { padding: 10px; background: #0093ef; color: #fff; }
+		#content .intro { padding: 10px; background: #C55; color: #fff; border-top: 1px dotted #fff;}
 		#content .detail { padding: 0 10px; }
 		#content .pagination { padding: 10px 0; margin: 0 10px; border-top: 1px dotted #0093ef; }
 
