update to Ruans style

--- a/project/templates/unicef/home.html
+++ b/project/templates/unicef/home.html
@@ -9,17 +9,17 @@
     <div id="content">
         <div class="h1">&nbsp;Ebola</div>
         <div class="h1">
-            <a href="{% url 'category_object_list' 'the-facts' %}"><img src="{{ STATIC_URL }}img/icon-the-facts.jpg"> The Facts</a>
+            <a href="{% url 'category_object_list' 'the-facts' %}"> The Facts</a>
             <div class="clear"></div>
         </div>
 
         <div class="h1">
-            <a href="{% url 'category_object_list' 'treatment' %}"><img src="{{ STATIC_URL }}img/icon-treatment.jpg"> Treatment</a>
+            <a href="{% url 'category_object_list' 'treatment' %}"> Treatment</a>
             <div class="clear"></div>
         </div>
 
         <div class="h1">
-            <a href="{% url 'category_object_list' 'safe-burial-practices' %}"><img src="{{ STATIC_URL }}img/icon-safe-burial-practices.jpg"> Safe Burial practices</a>
+            <a href="{% url 'category_object_list' 'safe-burial-practices' %}"> Safe Burial practices</a>
             <div class="clear"></div>
         </div>
 
