use default image for category

--- a/project/templates/jmbo/modelbase_category_list.html
+++ b/project/templates/jmbo/modelbase_category_list.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="object-category-list modelbase-category-list">
         <div class="h1">
-            <img src="{{ STATIC_URL }}img/icon-{{category.slug}}.jpg"> {{ category.title }}
+            <img src="{{ STATIC_URL }}img/icon-treatment.jpg"> {{ category.title }}
             <div class="clear"></div>
         </div>
 
