update header image

--- a/project/templates/unicef/home.html
+++ b/project/templates/unicef/home.html
@@ -2,7 +2,7 @@
 {% load url from future %}
 
 {% block above_content %}
-<div id="banner"><img src="{{ STATIC_URL }}img/doctor.jpg"></div>
+<div id="banner"><img src="{{ STATIC_URL }}img/header.jpg"></div>
 {% endblock %}
 
 {% block content %}
