--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -85,7 +85,7 @@
     </div>
 
     <div id="footer">
-        <span>&copy; Unicef {% now "Y" %}</span>
+        <span>Brought to you by the Ministry of Health, Zambia and UNICEF Zambia.</span>
     </div>
     {% load google_analytics_tags %}
     <div style="display:none">
