--- a/project/templates/unicef/home.html
+++ b/project/templates/unicef/home.html
@@ -15,8 +15,10 @@
         {% endfor %}
 
         <div class="detail">
-            <p><strong>Facts for Life saves lives!</strong></p>
-            <p>Facts for Life, provides vital messages and information for mothers, fathers, other family members and caregivers and communities to use in changing behaviours and practices that can save and protect the lives of children and help them grow and develop to their full potential.</p>
+            <p><strong>Ebola virus Frequently Asked Questions</strong></p>
+            <p>
+                24 September 2014: Although there are no known instances of Ebola virus in Zambia at this time, we know that many citizens are concerned. So we present this site to answer your Frequently Asked Questions.
+            </p>
             <p><a href="{% url 'about' %}">Read more »</a></p>
         </div>
     </div>
