--- a/project/templates/unicef/contact.html
+++ b/project/templates/unicef/contact.html
@@ -2,12 +2,12 @@
 
 {% block content %}
     <div class="h2">Contact Us</div>
-    <div class="intro">Ask us questions or connect with us</div>
+    <!-- <div class="intro"></div> -->
     <div class="detail">
-        <p>Email: <a href="mailto:lusaka@unicef.org">lusaka@unicef.org</a></p>
         <p>
-            <a href="http://www.facebook.com/UNICEFZambia" target="_blank"><img src="{{ STATIC_URL }}img/icon-facebook.png"></a> &nbsp;
-            <a href="http://twitter.com/UNICEFZambia" target="_blank"><img src="{{ STATIC_URL }}img/icon-twitter.png"></a>
+            For more information contact:<br/>
+            The Ministry of Health<br/>
+            By calling the <em>TOLL FREE NUMBER</em> <strong>909</strong> on all networks.<br/>
         </p>
     </div>
 {% endblock %}
